[package]
name = "holographic_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "holographic_core"
crate-type = ["cdylib"]

[dependencies]
# PyO3 用于 Python 绑定
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py37"] }
# Rug 是基于 GMP 的高性能大数库，指南中的性能之选
rug = { version = "1.24", features = ["integer", "serde"] }
# SHA2 用于 Hash-to-Prime
sha2 = "0.10"
# Hex 用于调试输出
hex = "0.4"
