[package]
name = "holographic_core"
version = "0.2.0" # Version Bump
edition = "2021"

[lib]
name = "holographic_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py37"] }
rug = { version = "1.24", features = ["integer", "serde"] }
sha2 = "0.10"
hex = "0.4"
# [Security Fix #1] 引入随机库用于实现 Timing Jitter
rand = "0.8"
