[package]
name = "holographic_core"
version = "0.4.0" # Final Hardening
edition = "2021"

[lib]
name = "holographic_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py37"] }
rug = { version = "1.24", features = ["integer", "serde", "rand"] } # Enable rand feature
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
zeroize = "1.6" # [Security Fix #5] Memory zeroing trait
